# dev-audit

./: .gitignore  docker-compose.yml  package-lock.json  package.json
_backup/: index.html  script.js  styles.css
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: audits.py  auth.py  router.py
backend/app/core/: __init__.py  config.py  database.py  redis.py  security.py
backend/app/models/: __init__.py  audit.py  user.py
backend/app/schemas/: audit.py  auth.py  user.py
backend/app/services/: audit_service.py  github_service.py
backend/tests/: conftest.py  test_health.py
src/: auth.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/auth/[...nextauth]/: route.ts
src/app/dashboard/: layout.tsx  page.tsx
src/app/dashboard/audit/[id]/: page.tsx
src/components/auth/: LoginButton.tsx  UserMenu.tsx
src/components/dashboard/: AuditCard.tsx  RepoInput.tsx  Sidebar.tsx  TopBar.tsx
src/components/ui/: SeverityBadge.tsx  StatusBadge.tsx
src/lib/: api.ts
src/types/: api.ts
