[project]
name = "devaudit-backend"
version = "0.1.0"
description = "DevAudit - Multi-agent AI-powered codebase auditing platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    # Database
    "motor>=3.6.0",
    "beanie>=1.27.0",
    # Cache / Pub-Sub
    "redis[hiredis]>=5.2.0",
    # Auth
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Logging
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
